@@ -158,7 +158,7 @@
           }
 
           &:hover {
-            background: $hover;
+            background: $row-hover;
           }
         }
       }
