@@ -38,7 +38,7 @@
     &.smoke { background-color: $background-color; }
 
     &:hover {
-      background: $hover;
+      background: $row-hover;
     }
 
     &:last-child {
