@@ -70,7 +70,7 @@ $pagination-bg:                        #fff;
 $pagination-border:                    $border-color;
 
 $pagination-hover-color:               $gl-gray;
-$pagination-hover-bg:                  $hover;
+$pagination-hover-bg:                  $row-hover;
 $pagination-hover-border:              $border-color;
 
 $pagination-active-color:              $blue-dark;
