@@ -21,7 +21,7 @@
 
       &:hover {
         td {
-          background: $hover;
+          background: $row-hover;
         }
         cursor: pointer;
       }
